--- a/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
@@ -268,19 +268,19 @@
                             </div>
                         </div>
 
-                        <div class="col-md-12">
-                            <div class="col-md-4">
-                                <tag-input name="tags"
-                                           [ngModel]="memo.tags" ngDefaultControl
-                                           (onRemove)="onItemRemoved($event)"
-                                           (onAdd)="onItemAdded($event)"
-                                           [placeholder]="options.placeholder"
-                                           [secondaryPlaceholder]="options.secondaryPlaceholder"
-                                           [maxItems]="options.maxItems"
-                                           [separatorKeys]="options.separatorKeys">
-                                </tag-input>
-                            </div>
-                        </div>
+                        <!--<div class="col-md-12">-->
+                            <!--<div class="col-md-4">-->
+                                <!--<tag-input name="tags"-->
+                                           <!--[ngModel]="memo.tags" ngDefaultControl-->
+                                           <!--(onRemove)="onItemRemoved($event)"-->
+                                           <!--(onAdd)="onItemAdded($event)"-->
+                                           <!--[placeholder]="options.placeholder"-->
+                                           <!--[secondaryPlaceholder]="options.secondaryPlaceholder"-->
+                                           <!--[maxItems]="options.maxItems"-->
+                                           <!--[separatorKeys]="options.separatorKeys">-->
+                                <!--</tag-input>-->
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
                     <div class="row top-buffer">
                         <div class="col-md-12">
