--- a/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
+++ b/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
@@ -1,4 +1,4 @@
-<a (click)="download()">{{fileName}}
+<a (click)="download()">{{displayFileName != null ? displayFileName : fileName}}
     <!--<i class="glyphicon glyphicon-download-alt" *ngIf="!pending"></i>-->
     <i class="glyphicon glyphicon-refresh" *ngIf="pending"></i>
 </a>
