Added some UI enhancements and fixed minor bugs

--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-edit.component.html
@@ -136,6 +136,8 @@
                                            (onRemove)="onItemRemoved($event)"
                                            (onAdd)="onItemAdded($event)"
                                            [placeholder]="tagOptions.placeholder"
+                                           [editable]="canEdit()"
+                                           [readonly]="canEdit()"
                                            [secondaryPlaceholder]="tagOptions.secondaryPlaceholder"
                                            [maxItems]="tagOptions.maxItems"
                                            [separatorKeys]="tagOptions.separatorKeys">
